# interactive-ai-career-agent

./: README.md  app.py  clean_architecture.txt  frontend.py  get_tree.py  main.py  pyproject.toml  requirements.txt  requirements_backend.txt  test.py
faiss_index/: index.faiss  index.pkl
